--- a/src/layouts/partials/PageHeader.astro
+++ b/src/layouts/partials/PageHeader.astro
@@ -3,7 +3,7 @@ const { title = "", desc = "" }: { title?: string; desc?: string } = Astro.props
 ---
 
 <section>
-  <div class="container text-center">
+  <div class="mx-auto max-w-[1320px] px-4 text-center">
     <!-- bg-gradient-to-b from-body to-theme-light
         dark:from-darkmode-body dark:to-darkmode-theme-light -->
     <div class="rounded-2xl pt-14">
