--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -1,15 +1,15 @@
 // section style
 .section {
-  @apply py-24 xl:py-28 px-96;
+  @apply py-24 xl:py-28 px-0;
   &-sm {
-    @apply py-16 xl:py-20;
+    @apply py-16 xl:py-20 md:px-0;
   }
 }
 
 // container
-.container {
-  @apply mx-auto max-w-[1320px] px-4;
-}
+// .container {
+//   @apply mx-auto max-w-[1320px] px-4;
+// }
 
 // form style
 .form-input {
@@ -85,36 +85,36 @@
   }
 }
 
-// tab
-.tab {
-  @apply overflow-hidden rounded-lg border border-border dark:border-darkmode-border;
-  &-nav {
-    @apply flex border-b border-border bg-theme-light dark:border-darkmode-border dark:bg-darkmode-theme-light;
-    @apply m-0 #{!important};
-    @apply list-none #{!important};
+// // tab
+// .tab {
+//   @apply overflow-hidden rounded-lg border border-border dark:border-darkmode-border;
+//   &-nav {
+//     @apply flex border-b border-border bg-theme-light dark:border-darkmode-border dark:bg-darkmode-theme-light;
+//     @apply m-0 #{!important};
+//     @apply list-none #{!important};
 
-    &-item {
-      @apply cursor-pointer border-b-[3px] border-border py-2 text-lg text-dark opacity-80 dark:border-light;
-      @apply my-0 #{!important};
-      @apply px-8 #{!important};
+//     &-item {
+//       @apply cursor-pointer border-b-[3px] border-border py-2 text-lg text-dark opacity-80 dark:border-light;
+//       @apply my-0 #{!important};
+//       @apply px-8 #{!important};
 
-      &.active {
-        @apply border-b-[3px] border-dark opacity-100 dark:border-darkmode-primary;
-      }
-    }
-  }
-  &-content {
-    &-panel {
-      @apply p-8;
-      p {
-        @apply mb-0;
-      }
-      &.active {
-        @apply block;
-      }
-    }
-  }
-}
+//       &.active {
+//         @apply border-b-[3px] border-dark opacity-100 dark:border-darkmode-primary;
+//       }
+//     }
+//   }
+//   &-content {
+//     &-panel {
+//       @apply p-8;
+//       p {
+//         @apply mb-0;
+//       }
+//       &.active {
+//         @apply block;
+//       }
+//     }
+//   }
+// }
 
 // accordion
 .accordion {
