--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -8,30 +8,41 @@ import HeaderBackground from "@/layouts/partials/HeaderBackground.astro";
 
 import { trimSlash, getAsset } from "@/utils/permalinks";
 import { Button } from "@/components/ui/button";
+import { getLang } from "@/utils/i18n";
+import LangPicker from "@/components/LangPicker.astro";
 
 interface Link {
-  text?: string;
-  href?: string;
+  text: string;
+  text_en: string;
+  text_fr: string;
+  href: string;
   ariaLabel?: string;
   icon?: string;
 }
-
 interface ActionLink extends Link {
   target?: "_blank" | "_self" | "_parent" | "_top";
 }
-
+interface language {
+  i18n: {
+    language: string;
+    nativeName: string;
+    link: string;
+  }[];
+}
 interface MenuLink extends Link {
   links?: Array<MenuLink>;
 }
 
 export interface Props {
   id?: string;
-  links?: Array<MenuLink>;
-  actions?: Array<ActionLink>;
+  links: Array<any>;
+  i18n: any[];
+  actions?: Array<any>;
   isSticky?: boolean;
   isDark?: boolean;
   isFullWidth?: boolean;
   showSearch?: boolean;
+  showLanguageSwitcher?: boolean;
   showToggleTheme?: boolean;
   showRssFeed?: boolean;
   showTwitter?: boolean;
@@ -43,10 +54,12 @@ const {
   id = "header",
   links = [],
   actions = [],
+  i18n = [],
   isSticky = false,
   isDark = false,
   isFullWidth = false,
   showSearch = false,
+  showLanguageSwitcher = false,
   showToggleTheme = false,
   showRssFeed = false,
   showTwitter = false,
@@ -55,6 +68,7 @@ const {
 } = Astro.props;
 
 const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
+const lang = getLang(Astro.url.pathname);
 ---
 
 <header
@@ -97,46 +111,70 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
         class="flex flex-col w-full font-medium md:w-auto md:flex-row md:self-center"
       >
         {
-          links.map(({ text, href, links }) => (
-            <li class={links?.length ? "dropdown" : ""}>
-              {links?.length ? (
-                <>
-                  <button class="flex items-center w-full px-4 py-3 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark">
-                    {text}{" "}
-                    <Icon
-                      name="tabler:chevron-down"
-                      class="w-3.5 h-3.5 ml-0.5 hidden md:inline"
-                    />
-                  </button>
-                  <ul class="dropdown-menu md:backdrop-blur-md dark:md:bg-dark rounded md:absolute pl-4 md:pl-0 md:hidden font-medium md:bg-white/90 md:min-w-[200px] drop-shadow-xl">
-                    {links.map(({ text: text2, href: href2 }) => (
-                      <li>
-                        <a
-                          class:list={[
-                            "first:rounded-t last:rounded-b py-2 px-5 block whitespace-no-wrap hover:text-dark dark:hover:text-darkmode-dark md:hover:bg-gray-100 dark:hover:bg-gray-800",
-                            { "aw-link-active": href2 === currentPath },
-                          ]}
-                          href={href2}
-                        >
-                          {text2}
-                        </a>
-                      </li>
-                    ))}
-                  </ul>
-                </>
-              ) : (
-                <a
-                  class:list={[
-                    "flex items-center py-3 px-4 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark",
-                    { "aw-link-active": href === currentPath },
-                  ]}
-                  href={href}
-                >
-                  {text}
-                </a>
-              )}
-            </li>
-          ))
+          links.map(({ text, text_en, text_fr, href, links }) => {
+            // console.log(`/${lang}${href}`, ",href");
+            return (
+              <li class={links?.length ? "dropdown" : ""}>
+                {links?.length ? (
+                  <>
+                    <button class="flex items-center w-full px-4 py-3 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark">
+                      {text}
+                      <Icon
+                        name="tabler:chevron-down"
+                        class="w-3.5 h-3.5 ml-0.5 hidden md:inline"
+                      />
+                    </button>
+                    <ul class="dropdown-menu md:backdrop-blur-md dark:md:bg-dark rounded md:absolute pl-4 md:pl-0 md:hidden font-medium md:bg-white/90 md:min-w-[200px] drop-shadow-xl">
+                      {links.map(
+                        ({
+                          text: text2,
+                          href: href2,
+                        }: {
+                          text: string;
+                          href: string;
+                        }) => {
+                          return (
+                            <li>
+                              <a
+                                class:list={[
+                                  "first:rounded-t last:rounded-b py-2 px-5 block whitespace-no-wrap hover:text-dark dark:hover:text-darkmode-dark md:hover:bg-gray-100 dark:hover:bg-gray-800",
+                                  { "aw-link-active": href2 === currentPath },
+                                ]}
+                                href={`/${lang}${href2}`}
+                              >
+                                {`${text2}`}
+                              </a>
+                            </li>
+                          );
+                        },
+                      )}
+                    </ul>
+                  </>
+                ) : text === "Home" ? (
+                  <a
+                    class:list={[
+                      "flex items-center py-3 px-4 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark",
+                      { "aw-link-active": href === currentPath },
+                    ]}
+                    href={`/${lang}`}
+                  >
+                    {lang === "fr" ? text_fr : lang === "en" ? text_en : text}
+                  </a>
+                ) : (
+                  // normal single link
+                  <a
+                    class:list={[
+                      "flex items-center py-3 px-4 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark",
+                      { "aw-link-active": href === currentPath },
+                    ]}
+                    href={`/${lang}${href}`}
+                  >
+                    {text}
+                  </a>
+                )}
+              </li>
+            );
+          })
         }
       </ul>
     </nav>
@@ -164,6 +202,16 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
                   class="w-6 h-6 md:w-5 md:h-5 md:inline-block"
                 />
               </span>
+            )
+          }
+
+          {
+            showLanguageSwitcher && (
+              <LangPicker
+                currentLang={lang}
+                pathName={currentPath}
+                languages={i18n}
+              />
             )
           }
 
