--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -1,34 +1,33 @@
 ---
 import Base from "@/layouts/Base.astro";
+import { getEntry, z } from "astro:content";
+import { getLocale } from "astro-i18n-aut";
+import { getLang } from "@/utils/i18n";
 
 export const prerender = true;
 
-const dev = import.meta.env.DEV;
-const prod = import.meta.env.PROD;
-const mode = import.meta.env.MODE;
-const baseUrl = import.meta.env.BASE_URL;
+// const locale = getLocale(Astro.url);
+// const locale2 = z.enum(["en", "fr"]).parse(locale) ?? "en";
 
-// // https://vercel.com/docs/projects/environment-variables/system-environment-variables
-const ci = import.meta.env.CI;
-const vercelEnv = import.meta.env.VERCEL_ENV;
-const vercelUrl = import.meta.env.VERCEL_URL;
-const gitCommitSha = import.meta.env.VERCEL_GIT_COMMIT_SHA;
+const lang = getLang(Astro.url.pathname);
 
-// https://vercel.com/docs/projects/environment-variables/system-environment-variables#framework-environment-variables
-// Frameworks typically use a prefix in order to expose Environment Variables to the browser.
-// The following prefixed Environment Variables will be available during the Build Step, based on the Project's selected Framework Preset.
-const publicVercelEnv = import.meta.env.PUBLIC_VERCEL_ENV;
-const publicVercelUrl = import.meta.env.PUBLIC_VERCEL_URL;
-const publicGitCommitSha = import.meta.env.PUBLIC_VERCEL_GIT_COMMIT_SHA;
+const text = await getEntry("test", "test");
+
+
+const {header1, header2, } = text.data[lang]
+
+
 ---
 
-<Base title="INFO">
+<Base title="INFO" >
   <section class="section">
-    <div class="container">
-      <div>
+    <div>
+      <div style={{fontSize:'55px'}}>
+          {header1} {header2}
+          <button class="btn" onclick="console.log('t', 'h2')">hello btn</button>
         <!-- show all meta env keys and values in the footer -->
-        <pre
-          class="justify-start text-start">{JSON.stringify(import.meta.env, null, 2)}</pre>
+        <!-- <pre
+          class="justify-start text-start">{JSON.stringify(import.meta.env, null, 2)}</pre> -->
       </div>
     </div>
   </section>
