--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -17,8 +17,18 @@
     bottom: 70px !important;
     padding: 0 5px;
   }
+
+  .language-picker:hover .dropdown-menu {
+    display: block;
+  }
+  .language-picker:focus .dropdown-menu {
+    display: block;
+  }
   
   .dropdown:hover .dropdown-menu {
+    display: block;
+  }
+  .dropdown:focus .dropdown-menu {
     display: block;
   }
   
