--- a/src/layouts/partials/HeroLanding.astro
+++ b/src/layouts/partials/HeroLanding.astro
@@ -1,9 +1,18 @@
 ---
 import heroImage from "@/assets/hero.webp";
+import { getLang } from "@/utils/i18n";
 import { Picture } from "astro:assets";
 import { getEntry } from "astro:content";
 
 const hero = await getEntry("sections", "landing");
+console.log(hero.data, "hero data ");
+
+const lang = getLang(Astro.url.pathname);
+const link1 = hero.data.primaryButton.link;
+const link2 = hero.data.secondaryButton.link;
+
+const adjustLink = `${lang}${link1}`;
+const adjustLink2 = `${lang}${link2}`;
 ---
 
 {
@@ -24,26 +33,26 @@ const hero = await getEntry("sections", "landing");
       {/* hero content on the left */}
       <div>
         <h1 class="text-2xl md:text-3xl lg:text-4xl xl:text-5xl lg:tracking-tight xl:tracking-tighter">
-          {hero.data.title}
+          {hero.data[lang].title}
         </h1>
-        <p class="text-lg mt-10">{hero.data.description}</p>
+        <p class="text-lg mt-10">{hero.data[lang].description}</p>
 
         {/* action buttons */}
         <div class="mt-10 flex flex-wrap justify-start gap-6">
           <a
-            href={hero.data.primaryButton.link}
+            href={adjustLink}
             class="relative flex h-12 items-center justify-center px-8 before:bg-dark dark:before:bg-darkmode-dark before:absolute before:inset-0 before:rounded-full before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
           >
             <span class="relative text-darkmode-dark dark:text-dark">
-              {hero.data.primaryButton.label}
+              {hero.data[lang].label}
             </span>
           </a>
           <a
-            href={hero.data.secondaryButton.link}
+            href={adjustLink2}
             class="relative flex h-12 items-center justify-center px-8 before:bg-primary/10 before:bg-gradient-to-b dark:before:border-gray-700 dark:before:bg-gray-800 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
           >
             <span class="relative text-dark dark:text-darkmode-dark">
-              {hero.data.secondaryButton.label}
+              {hero.data[lang].label2}
             </span>
           </a>
         </div>
