--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -1,33 +1,22 @@
 ---
 import Base from "@/layouts/Base.astro";
-import { getEntry, z } from "astro:content";
-import { getLocale } from "astro-i18n-aut";
-import { getLang } from "@/utils/i18n";
 
+// get static paths for this info page...
 export const prerender = true;
-
-// const locale = getLocale(Astro.url);
-// const locale2 = z.enum(["en", "fr"]).parse(locale) ?? "en";
-
-const lang = getLang(Astro.url.pathname);
-
-const text:any = await getEntry("test", "test");
-
-
-// const {header1, header2, } = text.data[lang]
-
-
 ---
 
-<Base title="INFO" >
+<Base title="INFO">
   <section class="section">
     <div>
-      <div style={{fontSize:'55px'}}>
-          <!-- {header1} {header2} -->
-          <button class="btn" onclick="console.log('t', 'h2')">hello btn</button>
-        <!-- show all meta env keys and values in the footer -->
+      <!-- also valid css style -->
+      <div style={{ fontSize: "55px" }}>
+        <button class="btn" onclick="console.log('hello', 'world')"
+          >hello btn</button
+        >
+        <!-- show all meta env keys and values -->
         <!-- <pre
-          class="justify-start text-start">{JSON.stringify(import.meta.env, null, 2)}</pre> -->
+          class="justify-start text-start">{JSON.stringify(import.meta.env, null, 2)}
+          </pre> -->
       </div>
     </div>
   </section>
