--- a/src/pages/ai/index.astro
+++ b/src/pages/ai/index.astro
@@ -4,7 +4,7 @@ import Base from "@/layouts/Base.astro";
 import { Picture } from "astro:assets";
 import writerImage from "@/assets/writer.png";
 
-export const prerender = true;
+export const prerender = false;
 
 const title = "诗词 + AI";
 const description = "科技与艺术融合，诗词创作从此变得更有趣而富有创意";
