--- a/src/layouts/partials/HeroLanding.astro
+++ b/src/layouts/partials/HeroLanding.astro
@@ -10,8 +10,8 @@ const lang = getLang(Astro.url.pathname);
 const link1 = hero.data.primaryButton.link;
 const link2 = hero.data.secondaryButton.link;
 
-const adjustLink = `${lang}${link1}`;
-const adjustLink2 = `${lang}${link2}`;
+const adjustLink = lang === "en" ? link1 : `${lang}${link1}`;
+const adjustLink2 = lang === "en" ? link2 : `${lang}${link2}`;
 ---
 
 {
