--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -10,6 +10,7 @@ import { trimSlash, getAsset } from "@/utils/permalinks";
 import { Button } from "@/components/ui/button";
 import { getLang } from "@/utils/i18n";
 import LangPicker from "@/components/LangPicker.astro";
+import type { linkSegment } from "@/config/HeaderConfig";
 
 interface Link {
   text: string;
@@ -111,70 +112,179 @@ const lang = getLang(Astro.url.pathname);
         class="flex flex-col w-full font-medium md:w-auto md:flex-row md:self-center"
       >
         {
-          links.map(({ text, text_en, text_fr, href, links }) => {
-            // console.log(`/${lang}${href}`, ",href");
-            return (
-              <li class={links?.length ? "dropdown" : ""}>
-                {links?.length ? (
-                  <>
-                    <button class="flex items-center w-full px-4 py-3 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark">
-                      {text}
-                      <Icon
-                        name="tabler:chevron-down"
-                        class="w-3.5 h-3.5 ml-0.5 hidden md:inline"
-                      />
-                    </button>
-                    <ul class="dropdown-menu md:backdrop-blur-md dark:md:bg-dark rounded md:absolute pl-4 md:pl-0 md:hidden font-medium md:bg-white/90 md:min-w-[200px] drop-shadow-xl">
-                      {links.map(
-                        ({
-                          text: text2,
-                          href: href2,
-                        }: {
-                          text: string;
-                          href: string;
-                        }) => {
-                          return (
-                            <li>
-                              <a
-                                class:list={[
-                                  "first:rounded-t last:rounded-b py-2 px-5 block whitespace-no-wrap hover:text-dark dark:hover:text-darkmode-dark md:hover:bg-gray-100 dark:hover:bg-gray-800",
-                                  { "aw-link-active": href2 === currentPath },
-                                ]}
-                                href={`/${lang}${href2}`}
-                              >
-                                {`${text2}`}
-                              </a>
-                            </li>
-                          );
-                        },
-                      )}
-                    </ul>
-                  </>
-                ) : text === "Home" ? (
-                  <a
-                    class:list={[
-                      "flex items-center py-3 px-4 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark",
-                      { "aw-link-active": href === currentPath },
-                    ]}
-                    href={`/${lang}`}
-                  >
-                    {lang === "fr" ? text_fr : lang === "en" ? text_en : text}
-                  </a>
-                ) : (
-                  // normal single link
-                  <a
-                    class:list={[
-                      "flex items-center py-3 px-4 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark",
-                      { "aw-link-active": href === currentPath },
-                    ]}
-                    href={`/${lang}${href}`}
-                  >
-                    {text}
-                  </a>
-                )}
-              </li>
-            );
-          })
+          links.map(
+            ({
+              text,
+              text_en,
+              text_fr,
+              href,
+              links,
+              text_de,
+              text_th,
+              text_ja,
+              text_es,
+              text_ar,
+              text_it,
+              text_hi,
+              text_zh,
+            }) => {
+              let singleLinkText: string | undefined = "Ciao Mondo!";
+              switch (lang) {
+                case "es":
+                  singleLinkText = text_es;
+                  break;
+                case "fr":
+                  singleLinkText = text_fr;
+                  break;
+                case "de":
+                  singleLinkText = text_de;
+                  break;
+                case "en":
+                  singleLinkText = text_en;
+                  break;
+                case "ja":
+                  singleLinkText = text_ja;
+                  break;
+                case "th":
+                  singleLinkText = text_th;
+                  break;
+                // case "ar":
+                // linkText = text_ar
+                //   break;
+                case "it":
+                  singleLinkText = text_it;
+                  break;
+                case "hi":
+                  singleLinkText = text_hi;
+                  break;
+                case "zh":
+                  singleLinkText = text_zh;
+                  break;
+
+                default:
+                  singleLinkText = "Hello World!";
+              }
+
+              return (
+                <li class={links?.length ? "dropdown" : ""}>
+                  {links?.length ? (
+                    <>
+                      <button class="flex items-center w-full px-4 py-3 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark">
+                        {singleLinkText}
+                        <Icon
+                          name="tabler:chevron-down"
+                          class="w-3.5 h-3.5 ml-0.5 hidden md:inline"
+                        />
+                      </button>
+
+                      <ul class="dropdown-menu md:backdrop-blur-md dark:md:bg-dark rounded md:absolute pl-4 md:pl-0 md:hidden font-medium md:bg-white/90 md:min-w-[200px] drop-shadow-xl">
+                        {links.map(
+                          ({
+                            text: text2,
+                            href: href2,
+                            text_en,
+                            text_fr,
+                            text_de,
+                            text_th,
+                            text_ja,
+                            text_es,
+                            text_ar,
+                            text_it,
+                            text_hi,
+                            text_zh,
+                          }: linkSegment) => {
+                            console.log(`${text2}${lang}`);
+
+                            let linkText: string | undefined = "Hello World!";
+                            switch (lang) {
+                              case "es":
+                                linkText = text_es;
+                                break;
+                              case "fr":
+                                linkText = text_fr;
+                                break;
+                              case "de":
+                                linkText = text_de;
+                                break;
+                              case "en":
+                                linkText = text_en;
+                                break;
+                              case "ja":
+                                linkText = text_ja;
+                                break;
+                              case "th":
+                                linkText = text_th;
+                                break;
+                              case "hi":
+                                linkText = text_hi;
+                                break;
+                              // case "ar":
+                              // linkText = text_ar
+                              //   break;
+                              case "it":
+                                linkText = text_it;
+                                break;
+                              case "zh":
+                                linkText = text_zh;
+                                break;
+
+                              default:
+                                linkText = "Hello World!";
+                            }
+
+                            return (
+                              <li>
+                                {/* TODO: --changeDefaultLocale
+                              in the href "en" needs to be your default
+                              example: "de" or "fr" or "th"  */}
+                                <a
+                                  class:list={[
+                                    "first:rounded-t last:rounded-b py-2 px-5 block whitespace-no-wrap hover:text-dark dark:hover:text-darkmode-dark md:hover:bg-gray-100 dark:hover:bg-gray-800",
+                                    { "aw-link-active": href2 === currentPath },
+                                  ]}
+                                  href={
+                                    lang === "en"
+                                      ? `${href2}`
+                                      : `/${lang}${href2}`
+                                  }
+                                >
+                                  {/* auto redirectDefaultLocale doesn't work for some reason with sst
+                                so we route to / instead of /en for defaultLocale */}
+                                  {`${linkText}`}
+                                </a>
+                              </li>
+                            );
+                          },
+                        )}
+                      </ul>
+                    </>
+                  ) : text === "Home" ? (
+                    <a
+                      class:list={[
+                        "flex items-center py-3 px-4 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark",
+                        { "aw-link-active": href === currentPath },
+                      ]}
+                      href={lang === "en" ? "/" : `/${lang}`}
+                    >
+                      {/* <Icon name="tabler:home" class="w-8 h-8" /> */}
+                      {singleLinkText}
+                    </a>
+                  ) : (
+                    // normal single link
+                    <a
+                      class:list={[
+                        "flex items-center py-3 px-4 whitespace-no-wrap rounded hover:text-dark dark:hover:text-darkmode-dark",
+                        { "aw-link-active": href === currentPath },
+                      ]}
+                      href={lang === "en" ? `${href}` : `/${lang}${href}`}
+                    >
+                      {singleLinkText}
+                    </a>
+                  )}
+                </li>
+              );
+            },
+          )
         }
       </ul>
     </nav>
