regular pages ssr bandaid

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -64,6 +64,12 @@ const text = {
     header: "404 页面不存在",
     description: "您寻找的页面可能已被删除、更名或暂时无法访问。",
     buttonText: "返回首页"
+  },
+  ko: {
+    title: "페이지가 없는다",
+    header: "404 페이지가 없는다",
+    description: "검색된 페이지가 삭제됩니다, 이름 변경됩니다, 특별한 전용가 없습니다.",
+    buttonText: "방향으로 제공하기"
   }
 };
 
