--- a/src/pages/[regular].astro
+++ b/src/pages/[regular].astro
@@ -2,45 +2,67 @@
 import Base from "@/layouts/Base.astro";
 import { getSinglePage } from "@/lib/contentParser.astro";
 import PageHeader from "@/partials/PageHeader.astro";
+import { getLang } from "@/utils/i18n";
+
 
 export const prerender = false;
-
+const COLLECTION_FOLDER = "pages";
+const pages = await getSinglePage(COLLECTION_FOLDER);
+const lang = getLang(Astro.url.pathname);
 // get static paths for all pages
-export async function getStaticPaths() {
-  const COLLECTION_FOLDER = "pages";
+ export async function getStaticPaths() {
 
-  const pages = await getSinglePage(COLLECTION_FOLDER);
+ }
+
+// const loader = () =>{
 
   const paths = pages.map((page) => ({
+    
     params: {
       regular: page.slug,
     },
     props: { page },
   }));
-  return paths;
-}
+  
+// ));
+// console.log( "page")
+// return paths
+// }
 
-const { page } = Astro.props;
-const { title, meta_title, description, image } = page.data;
-const { Content } = await page.render();
+  // console.log(paths, "paths");
+  
+const astropath = Astro.url.pathname;
+
+const nr = astropath === "/privacy-policy" || astropath.slice(3, astropath.length) === "/privacy-policy" ? 0 : 1
+console.log(astropath.slice(1, astropath.length), "astro slicedsp");
+
+
+// console.log(paths, "lodader");
+// const { page } = Astro.props;
+console.log(nr, "nr");
+
+// const { title, meta_title, description, image } = loader.data;
+const { Content } = await pages[nr].render();
 ---
+{
 
 <Base
-  title={title}
-  meta_title={meta_title}
-  description={description}
-  image={image}
+  title={"title"}
+  meta_title={"meta_title"}
+  description={"description"}
+  image={'./public/favicon.png'}
 >
-  <PageHeader title={title} />
+  <PageHeader title={"title"} />
   <section class="section-sm">
     <div class="container">
       <div class="row justify-center">
         <div class="lg:col-10">
           <div class="content">
             <Content />
+             <!-- {pages[0].body} -->
           </div>
         </div>
       </div>
     </div>
   </section>
-</Base>
+</Base>}
